07-deploying-demo-application/HTTPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-gateway-httproute-api-golang
  namespace: demo-app
spec:
  parentRefs:
    - name: traefik
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/golang
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: api-golang
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-gateway-httproute-api-node
  namespace: demo-app
spec:
  parentRefs:
    - name: traefik
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/node
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: api-node
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-gateway-httproute-client-react
  namespace: demo-app
spec:
  parentRefs:
    - name: traefik
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: client-react
          port: 80
